--- a/local-storage-form/index.html
+++ b/local-storage-form/index.html
@@ -44,7 +44,13 @@
     </div>
 
 <section id="info" class="mt-5 pt-2">
-
+  <div class="card border-dark mb-3" style="max-width: 18rem;">
+    <div class="card-header">Header</div>
+    <div class="card-body text-dark">
+      <h2 id="myName" class="card-title">Name</h2>
+      <h5 id="myEmail" class="card-title">E-mail</h5>
+      <p id="myMessage" class="card-text">Message</p>
+    </div>
 </section>
     
   </main>
