send object adde

--- a/local-storage-form/index.html
+++ b/local-storage-form/index.html
@@ -38,7 +38,8 @@
         <button id="removeMessage" class="btn btn-outline-secondary" type="button">Delete</button>
         <textarea id="message" class="form-control" placeholder="" aria-label="Example text with two button addons"></textarea>
       </div>
-      <button onclick="reset()" class="btn btn-danger" >Reset</button>
+      <button onclick="SendALL()" class="btn btn-danger" >Send</button>
+        <button onclick="reset()" class="btn btn-danger" >Reset</button>
       
       <button onclick="show()" class="btn btn-info" >Show</button>
     </div>
